Bug fix where footer was too close to the content

--- a/src/pages/HeatMapPage/HeatMapPage.css
+++ b/src/pages/HeatMapPage/HeatMapPage.css
@@ -12,4 +12,5 @@
   width: 80%;
   max-width: 1200px;
   min-height: 83.9vh;
+  margin-bottom: 10px;
 }
